# RaytracingWeekend

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RaytracingDemo.sln  conanfile.py
.github/workflows/: cmake-multi-platform.yml
RaytracingDemo/: Image.h  PPMImageSerialier.cpp  RawImage.h  RaytracingDemo.vcxproj  RaytracingDemo.vcxproj.filters  main.cpp  vec3.h
src/: Aabb.cpp  Aabb.h  Bvh.cpp  Bvh.h  CMakeLists.txt  Camera.cpp  Camera.h  CommonDefines.h  ConsoleProgressBar.cpp  ConsoleProgressBar.h  HitRecord.h  Hittable.h  HittableCollection.cpp  HittableCollection.h  Image.h  Interval.h  LambertianMaterial.cpp  LambertianMaterial.h  Material.h  Mesh.cpp  Mesh.h  MetalMaterial.cpp  MetalMaterial.h  PPMImageSerialier.cpp  PPMImageSerializer.h  PlyLoader.cpp  PlyLoader.h  Progress.h  Progression.h  Random.h  RawImage.cpp  RawImage.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h  TaskManager.cpp  TaskManager.h  (+6 more)
tests/: testAabb.cpp
